--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   flutter_local_notifications: ^13.0.0
   flutter_native_splash: ^2.3.0
+  fluttertoast: ^8.2.2
   get: ^4.6.5
   http: ^0.13.5
   image_cropper: ^3.0.3
