--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_barcode_scanner: ^2.0.0
+  flutter_countdown_timer: ^4.1.0
   flutter_image_compress: ^2.0.2
   flutter_launcher_icons: ^0.13.1
   flutter_local_notifications: ^13.0.0
