On branch master Your branch is up to date with 'origin/master'.
15 Juli 2023
- Membuat fungsi untuk handle local notifications
- Menambahkan platform channel id pada file AndroidManifest.xml
- Menambahkan icon aplikasi pada folder drawabel dan drawabel-v21, digunakan untuk icon notifikasi
- Membuat fungsi untuk handle send notifications to spesific users (Petugas)
- Membuat fungsi untuk mengambil data token dari collection users (Petugas)
- Membuat fungsi get data dari fungsi mengambil data token petugas
- Downgrade versi flutter_local_notifications pada pubspec.yaml

Changes to be committed:
	modified:   Todo.txt
	modified:   android/app/src/main/AndroidManifest.xml
	new file:   android/app/src/main/res/drawable-v21/launcher_icon.png
	new file:   android/app/src/main/res/drawable/launcher_icon.png
	modified:   lib/app/screens/firebase_api.dart
	modified:   lib/app/screens/home/home_view.dart
	modified:   lib/app/screens/home/kirim/kirim.dart
	modified:   lib/app/screens/home/kirim/kirim_controller.dart
	modified:   pubspec.lock
	modified:   pubspec.yaml

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
   flutter_countdown_timer: ^4.1.0
   flutter_image_compress: ^2.0.2
   flutter_launcher_icons: ^0.13.1
-  flutter_local_notifications: ^13.0.0
+  flutter_local_notifications: ^9.8.0+1
   flutter_native_splash: ^2.3.0
   fluttertoast: ^8.2.2
   get: ^4.6.5
