On branch master Your branch is up to date with 'origin/master'.
21 - 22 Juli 2023:
- Mengubah beberapa stuktur folder project
- Menambahkan fungsi batas waktu dengan package workmanager
- Fix routing pada proses hapus produk dan petugas
- Menambahkan tombol Lupa password pada halaman login
- Menambahkan validasi foto untuk halaman daftar dan kirim sampah
- Memperbaiki kondisi ketika form kosong pada halaman reset password dan tambah produk
- Fix proses konfirmasi pengambilan sampah
- Fix proses penambahan akun petugas oleh admin

Changes to be committed:
	modified:   .vscode/settings.json
	modified:   Todo.txt
	deleted:    lib/app/constant/format_tanggal.dart
	modified:   lib/app/data/models/users_model.dart
	renamed:    lib/app/screens/auth/daftar.dart -> lib/app/screens/auth/daftar/daftar.dart
	renamed:    lib/app/screens/auth/signup/daftar_binding.dart -> lib/app/screens/auth/daftar/daftar_binding.dart
	renamed:    lib/app/screens/auth/signup/daftar_controller.dart -> lib/app/screens/auth/daftar/daftar_controller.dart
	renamed:    lib/app/screens/auth/login.dart -> lib/app/screens/auth/login/login.dart
	renamed:    lib/app/screens/home/admin/add_petugas/add_petugas.dart -> lib/app/screens/home/admin/petugas/add_petugas.dart
	renamed:    lib/app/screens/home/admin/add_petugas/add_petugas_binding.dart -> lib/app/screens/home/admin/petugas/add_petugas_binding.dart
	renamed:    lib/app/screens/home/admin/add_petugas/add_petugas_controller.dart -> lib/app/screens/home/admin/petugas/add_petugas_controller.dart
	renamed:    lib/app/screens/home/admin/add_petugas/kelola_petugas.dart -> lib/app/screens/home/admin/petugas/kelola_petugas.dart
	modified:   lib/app/screens/home/admin/produk/edit_produk.dart
	modified:   lib/app/screens/home/admin/produk/tambah_produk.dart
	modified:   lib/app/screens/home/admin/transaksi_poin/transaksipoin_controller.dart
	modified:   lib/app/screens/home/home_view.dart
	modified:   lib/app/screens/home/petugas/request_pengambilan/detail_req

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,23 +4,23 @@
     "codesnap.realLineNumbers": false,
     "codesnap.showWindowTitle": false,
     "workbench.colorCustomizations": {
-        "activityBar.activeBackground": "#007974",
-        "activityBar.background": "#007974",
+
+        "activityBar.activeBackground": "#080808",
+        "activityBar.background": "#1f1f1f",
         "activityBar.foreground": "#e7e7e7",
         "activityBar.inactiveForeground": "#e7e7e799",
         "activityBarBadge.background": "#f860ff",
         "activityBarBadge.foreground": "#15202b",
         "commandCenter.border": "#e7e7e799",
         "sash.hoverBorder": "#007974",
-        "statusBar.background": "#004643",
+        "statusBar.background": "#1f1f1f",
         "statusBar.foreground": "#e7e7e7",
         "statusBarItem.hoverBackground": "#007974",
         "statusBarItem.remoteBackground": "#004643",
         "statusBarItem.remoteForeground": "#e7e7e7",
-        "titleBar.activeBackground": "#004643",
+        "titleBar.activeBackground": "#1f1f1f",
         "titleBar.activeForeground": "#e7e7e7",
         "titleBar.inactiveBackground": "#00464399",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#004643"
 }
