--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   printing: ^5.10.4
   provider: ^6.0.5
   qr_flutter: ^4.1.0
+  shared_preferences: ^2.2.0
+  workmanager: ^0.5.1
 
 dev_dependencies:
   flutter_lints: ^2.0.1
